# MoiGoroda

./: .cliffignore  .coveragerc  .gitignore  .nvimlog  .pre-commit-config.yaml  .prettierrc  .pylintrc  AGENTS.md  CHANGELOG.md  Makefile  NOTICE  README.md  ToDo  cliff.toml  db.json  docker-compose.yml  gunicorn.conf.py  initial_db.json  llms-full.txt  manage.py  poetry.lock1  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  setup.cfg  test_settings_debug.py
.cursor/rules/: api-endpoints-django-modern-rest.mdc  commit-messages.mdc  git-branches.mdc  git-commits-user-only.mdc  testing.mdc  ui-badges-tailwind.mdc  ui-buttons-tailwind.mdc  ui-lib-components.mdc
.github/workflows/: dev.yml  main.yml  master.yml  workflow.yml
.opencode/: AGENTS.md
.opencode/commands/: check-server.md
MoiGoroda/: .env.example  asgi.py  context_processors.py  error_handlers.py  requirements.txt  settings.py  storages.py  tinymce_views.py  urls.py  wsgi.py
account/: admin.py  api.py  apps.py  dto.py  forms.py  models.py  report.py  repository.py  schemas.py  serializer.py  tests.py  urls.py  urls_api.py  views.py
account/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_username.py  0002_rename_switch_share_general_sharesettings_can_share_and_more.py  0003_delete_user.py  0003_rename_can_share_basic_info_sharesettings_can_share_dashboard.py  0004_sharesettings_can_subscribe.py  0005_userconsent.py  0006_alter_sharesettings_options.py  0007_group_user_alter_userconsent_options_and_more.py
account/tests/: conftest.py  test_forms.py  test_repository.py
account/urls/: api.py  views.py
account/use_cases/: __init__.py  visited_cities_countries_coverage.py
account/view/: download.py
account/views/: access.py  download.py  profile.py  statistics.py
advertisement/: admin.py  apps.py  models.py
advertisement/migrations/: 0001_initial.py  0002_alter_linkadvertisement_options_and_more.py  0003_advertisementexception.py  0004_delete_linkadvertisement.py
advertisement/templatetags/: excluded_users.py  random_advertisement.py
advertisement/tests/: conftest.py
analytics/: admin.py  api.py  models.py  services.py  views.py
analytics/migrations/: 0001_initial_visited_city_add_source.py  0002_surface_labels_and_drop_country_map.py  0003_add_mode_switch_log.py  0004_remove_mode_switch_log_updated_at.py  0005_add_mode_switch_log_mode_index.py
analytics/urls/: __init__.py  api.py
blog/: admin.py  apps.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_use_tinymce.py  (+5 more)
city/: admin.py  api.py  apps.py  dto.py  forms.py  models.py  place.py  schemas.py  serializers.py  signals.py  sort.py  structs.py  urls.py  views.py
collection/: admin.py  api.py  apps.py  filter.py  forms.py  models.py  repository.py  serializers.py  services.py  urls.py  views.py
country/: admin.py  api.py  apps.py  dto.py  models.py  repository.py  serializer.py  serializers.py  urls.py  views.py
dashboard/: api.py  apps.py  schemas.py  statistics_helpers.py  urls.py  views.py
django_modern_rest/: __init__.py  apps.py  components.py  controller.py  cookies.py  decorators.py  endpoint.py  errors.py  exceptions.py  headers.py  metadata.py  options_mixins.py  response.py  routing.py  serialization.py  settings.py  test.py  types.py
docs/: CODE_REVIEW_feat_place_collection.md
frontend/: llms.txt  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js  vite.config.mjs  vitest.config.mjs
geo_polygons/: admin.py  api.py  apps.py  models.py  urls.py  urls_api.py  views.py
main_page/: apps.py  urls.py  views.py
news/: admin.py  apps.py  models.py  repository.py  urls.py  views.py
place/: admin.py  api.py  apps.py  models.py  schemas.py  serializers.py  views.py
premium/: __init__.py  admin.py  apps.py  dto.py  models.py  repository.py  service.py  subscription_activation.py  subscription_page_service.py  urls.py  views.py  webhook.py  webhook_logging.py  webhook_service.py
region/: admin.py  api.py  apps.py  choises.py  models.py  serializers.py  urls.py  views.py
scripts/: collectstatic.sh  restart.sh
services/: cache.py  calculate.py  logger.py  logging_filters.py  morphology.py  url_params.py
share/: apps.py  service.py  structs.py  urls.py  views.py
static/: MoiGoroda.js  style.css  style_new.css
subscribe/: admin.py  apps.py  models.py  repository.py  serializers.py  urls.py  views.py
templates/: base-clear_page.html  base-simple.html  base.html  head.html  index.html  robots.txt  sitemap.xml
test_data/: add_visited_city.py
tests/: create_db.py  url_params__test.py
travel/: admin.py  forms.py  models.py  urls.py  views.py
ui_demo/: apps.py  urls.py  views.py
utils/: CitiesByRegionMixin.py  CollectionListMixin.py  LoggingMixin.py  RegionListMixin.py  SortFilterMixin.py  VisitedCityByRegionMixin.py  VisitedCityMixin.py  decorators.py  filter_funcs.py  preline_select.py  sort_funcs.py  word_changes.py
(+1306 files in other folders)
