[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "~4.2"
crispy-bootstrap5 = "^0.7"
django-markdownify = "^0.9.3"
django-mathfilters = "^1.0.0"
django-mdeditor = "^0.1.20"
psycopg2-binary = "^2.9.6"
sentry-sdk = "^1.39.0"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
django-stubs = "^4.2.3"
django-debug-toolbar = "^4.1.0"
mypy = "^1.8.0"
ruff = "^0.3.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-django = "^4.8.0"
beautifulsoup4 = "^4.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
warn_return_any = true
show_error_codes = true
follow_imports = "silent"
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_untyped_defs = true

[tool.django-stubs]
django_settings_module = "MoiGoroda.settings"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
