[project]
name = "moi_goroda"
version = "2.4"
requires-python = "~=3.12"
dependencies = [
    "django>=4.2,<4.3",
    "crispy-bootstrap5>=0.7,<0.8",
    "django-markdownify>=0.9.3,<0.10",
    "django-mathfilters>=1.0.0,<2",
    "django-mdeditor>=0.1.20,<0.2",
    "psycopg2-binary>=2.9.6,<3",
    "gunicorn>=21.2.0,<22",
    "python-dotenv>=1.0.1,<2",
    "openpyxl>=3.1.3,<4",
    "pydantic>=2.7.3,<3",
    "djangorestframework>=3.15.2,<4",
    "django-colorfield>=0.13.0,<0.14",
    "django-admin-autocomplete-filter>=0.7.1,<0.8",
    "setuptools>=80.9.0,<81",
    "petrovich>=2.0.1,<3",
    "pymorphy3>=2.0.4,<3",
]

[dependency-groups]
dev = [
    "pylint>=2.17.4,<3",
    "django-stubs>=4.2.3,<5",
    "django-debug-toolbar>=4.1.0,<5",
    "mypy>=1.8.0,<2",
    "ruff>=0.3.1,<0.4",
    "pre-commit>=3.8.0,<4",
    "pytest>=7.4.0,<8",
    "pytest-cov>=4.1.0,<5",
    "pytest-mock>=3.14.0,<4",
    "pytest-django>=4.8.0,<5",
    "beautifulsoup4>=4.12.2,<5",
]

[tool.uv]
package = false
default-groups = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
warn_return_any = true
show_error_codes = true
follow_imports = "silent"
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_untyped_defs = true

[tool.django-stubs]
django_settings_module = "MoiGoroda.settings"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
DJANGO_SETTINGS_MODULE = "MoiGoroda.settings"
python_files = ["test_*"]
python_functions = ["test_*"]
